--- a/cv_jp/cv_jp.tex
+++ b/cv_jp/cv_jp.tex
@@ -10,16 +10,15 @@
 %--preamble--%
 \fancyhead{} % clear all header fields
 \pagestyle{fancy} % for header
-\fancyhead[RO,LE]{浜村俊傑CV\ \ 更新日：2024年1月9日}
+\fancyhead[RO,LE]{CV　浜村\ 俊傑　更新日：2024年2月2日}
 \begin{document}
 \begin{center}
 		{\LARGE \textbf{Curriculum Vitae}}\\~\\
 \end{center}
-\date{2024年01月09日}
 
 \noindent
 \section{氏名}
-浜村\ 俊傑（ハマムラ\ トシタカ, Hamamura, Toshitaka）
+浜村\ 俊傑（ハマムラ\ トシタカ）
 \section{現所属}
 College of Education, Psychology, \& Social Work,\\
 Flinders University\\
@@ -91,31 +90,32 @@ hamamura[@]19.alumni.u-tokyo.ac.jp\\
 
 \section{学術論文（査読あり）}
 \begin{enumerate}
-	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (in press). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}.
-	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (in press). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}.
-	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}, 147, 107834. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
-	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}, 11, 78. \url{https://doi.org/10.1186/s40359-023-01095-5}
-	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}
-	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
-	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
-	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
 	\item \underline{Hamamura, T.}, \& Laird, P.G. (2014) The effect of perfectionism and acculturative stress on levels of depression experienced by East Asian international students. \textit{Journal of Multicultural Counseling Development}, 42, 205-217. \url{https://doi.org/10.1002/j.2161-1912.2014.00055.x}
+	\item \underline{Hamamura, T.}, Suganuma, S., Ueda, M., Shimoyama, H., \& Mearns, J. (2018). Standalone effects of a cognitive behavioral intervention using a smartphone application on psychological distress and alcohol consumption among Japanese workers: A non-randomized controlled trial. \textit{JMIR Mental Health}, 5(1):e24. \url{http://doi.org/10.2196/mental.8984}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018). The efficacy of a web-based screening and brief intervention for reducing alcohol consumption among Japanese problem drinkers: Protocol of a single-blind randomized controlled trial. \textit{JMIR Research Protocol}, 7(5):e10650.  \url{http://doi.org/10.2196/10650}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2019). Depression and somatic symptoms in Japanese and American college students: Negative mood regulation expectancies as a personality correlate. \textit{International Journal of Psychology}, 54(3), 351-359. \url{http://doi.org/10.1002/ijop.12467}
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2020). Mood induction changes negative alcohol expectancies among Japanese adults with problematic drinking: Negative mood regulation expectancies moderate the effect. \textit{International Journal of Mental Health and Addiction}, 18, 195-205. \url{http://doi.org/10.1007/s11469-018-9991-8}
+	\item Oka, T., \underline{Hamamura, T.}, Miyake, Y.,  Kobayashi, N., Honjo, M., Kawato, M., Kubo, T., \& Chiba, T. (2021). Prevalence and risk factors of internet gaming disorder and problematic internet use before and during the COVID-19 pandemic: A large online survey of Japanese adults. \textit{Journal of Psychiatric Research}, 142, 218-225. \url{https://doi.org/10.1016/j.jpsychires.2021.07.054}
+	\item Oka, T., Kubo, T., Kobayashi, N., Nakai, F., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Boku, S., Kanazawa, T., Nagamine, M.,  Cortese, A., Takebayashi, M., Kawato, M., Chiba, T. (2021). Multiple time measurements of multidimensional psychiatric states from immediately before the COVID-19 pandemic to one year later: a longitudinal online survey of the Japanese population. \textit{Translational Psychiatry}, 11, 573. \url{https://doi.org/10.1038/s41398-021-01696-x}
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2022). The effectiveness of a web-based intervention for Japanese adults with problem drinking: An online randomized controlled trial. \textit{Addictive Behaviors Reports}, 15, 100400. \url{https://doi.org/10.1016/j.abrep.2021.100400}	
+	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
+	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}, 11, 78. \url{https://doi.org/10.1186/s40359-023-01095-5}
+	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}, 147, 107834. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
+	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
+	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (in press). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}.
+	\item Kobayashi, N., \textit{et al.} (in press) Treatment Readiness and Prognosis for Problematic Smartphone Use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and Log Data. \textit{Psychiatry and Clinical Neurosciences Reports}.
 \end{enumerate}
 
 \section{学術論文・プレプリント（査読なし）}
 \begin{enumerate}
-	\item \underline{浜村\ 俊傑}（2023）．アルコール依存症に対するデジタル介入の現状\ 精神科治療学　第38巻増刊号．
-	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. \textit{medRxiv}. \url{https://doi.org/110.1101/2020.12.15.20246819}
-	\item \underline{浜村\ 俊傑}（2020）．書評：松本俊彦（著）「物質使用障害の治療」\ 精神療法，p.715
-	\item \underline{浜村\ 俊傑}（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」\ 精神療法，p.602-603
-	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李\ 智慧・下山\ 晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要，42，p.31-38．
-	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原\ 祐理・大賀\ 真伊・鈴木\ 拓朗・小林\ 奈央・下山\ 晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要，41，p.34-41．
 	\item 上田\ 翠・\underline{浜村\ 俊傑}・中村\ 杏奈・下山\ 晴彦(2017). 衝動性に関する遺伝環境交互作用−動物研究の応用可能性−\ 東京大学大学院教育学研究科臨床心理学コース紀要，40，p.22-29．
+	\item 内村\ 慶士・\underline{浜村\ 俊傑}・北原\ 祐理・大賀\ 真伊・鈴木\ 拓朗・小林\ 奈央・下山\ 晴彦（2018）．ACT（アクセプタンス\&コミットメントセラピー）を用いたポピュレーションアプローチの可能性―well-beingの増進とその予防効果に着目して\ 東京大学大学院教育学研究科臨床心理学コース紀要，41，p.34-41．
+	\item 高堰\ 仁美・\underline{浜村\ 俊傑}・李\ 智慧・下山\ 晴彦（2019）. 慢性的虐待のリスクを抱え孤立状態にある母親への支援の現状と課題\ 東京大学大学院教育学研究科臨床心理学コース紀要，42，p.31-38．
+	\item \underline{浜村\ 俊傑}（2019）．文献紹介：Panova \& Carbonell（著）「スマートフォン依存は果たして依存症なのか？(Is smartphone addiction really an addiction?)」\ 精神療法，p.602-603
+	\item \underline{浜村\ 俊傑}（2020）．書評：松本俊彦（著）「物質使用障害の治療」\ 精神療法，p.715
+	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. \textit{medRxiv}. \url{https://doi.org/110.1101/2020.12.15.20246819}
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item \underline{浜村\ 俊傑}（2023）．アルコール依存症に対するデジタル介入の現状\ 精神科治療学　第38巻増刊号．
 \end{enumerate}
 
 \subsection{国際学会（招待講演あり）}
