--- a/cv_en/cv_en.tex
+++ b/cv_en/cv_en.tex
@@ -1,14 +1,16 @@
 \documentclass[a4paper]{article}
 %----packages----%
-\usepackage{geometry}
+\usepackage[margin=3cm]{geometry}
 \usepackage{hanging}
 \usepackage{url}
 \usepackage{hyperref}
 %\usepackage{xurl} % url over the page break
 %\usepackage{pagecolor}
-\usepackage{geometry}
-	\geometry{total={170mm,257mm}, left=20mm, top=20mm}
-
+\usepackage{fancyhdr} % for header
+%----preamble----%
+\fancyhead{} % clear all header fields
+\pagestyle{fancy} % for header
+\fancyhead[RO,LE]{CV,　T. Hamamura}
 \begin{document}
 \sloppy
 \title{Curriculum Vitae}
@@ -35,8 +37,9 @@ toshitaka.hamamura@flinders.edu.au
 \section{Other Position and Affiliation}
 \begin{itemize}
 	\item 2020/04---present: \textbf{JSPS Research Fellow}, National Center for Cognitive Behavior Therapy and Research, National Center of Neurology and Psychiatry
-	\item 2020/04---present: \textbf{Invited Researcher}, KDDI Research, Inc.
+	\item 2020/04---2024/03: \textbf{Invited Researcher}, KDDI Research, Inc.
 	\item 2022/12---2023/01: \textbf{Visiting Scholar}, Department of Psychology, National Taiwan University
+	\item 2023/04--present: \textbf{Visiting Scholar}, College of Education, Psychology \& Social Work, Flinders University
 \end{itemize}
 
 \section{Education}
@@ -86,6 +89,9 @@ toshitaka.hamamura@flinders.edu.au
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., Mearns, J. (2022). Negative Mood Regulation Expectancies Moderate the Effects of Acculturative Stress on Affective Symptoms among Chinese International Students in Japan. \textit{Japanese Psychological Research}. \url{https://doi.org/10.1111/jpr.12408}
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Kawashima, I., Sakai, Y., Tanaka, S. C., \& Honjo, M. (2023). Validity, reliability, and correlates of the Smartphone Addiction Scale, Short Version among Japanese adults. \textit{BMC Psychology}, 11, 78. \url{https://doi.org/10.1186/s40359-023-01095-5}
 	\item \underline{Hamamura, T.}, Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Honjo, M. (2023). Standalone effects of focus mode and social comparison functions on problematic smartphone use among adolescents. \textit{Addictive Behaviors}, 147, 107834. \url{https://doi.org/10.1016/j.addbeh.2023.107834}
+	\item Chiba, T., Ide, K., Murakami, M., Kobayashi, N., Oka, T., Nakai, F., Yorizawa, R., Miyake, Y., \underline{Hamamura, T.}, Honjo, M., Toda, H., Kanazawa, T., Boku, S., Kubo, T., Hishimoto, A., Kawato, M., \&  Cortese, A. (2023). Event-related PTSD symptoms as a high-risk factor for suicide--Longitudinal observational study. \textit{Nature Mental Health}, 1, 1013--1022. \url{https://doi.org/10.1038/s44220-023-00157-2}
+	\item King, D., Nogueira-López, A., Galanis, C., \underline{Hamamura, T.}, Bäcklund, C., Giardina, A., Billieux, J., \& Delfabbro, P. (2023). Reconsidering item response categories in gaming disorder symptoms measurement. \textit{Journal of Behavioral Addictions}, 12(4), 873--877. \url{https://doi.org/10.1556/2006.2023.00070}
+	\item Kobayashi, N., Jitoku, D., Mochimatsu, R., \underline{Hamamura, T.}, Honjo, M., Takagi, S., Sugihara, G. and Takahashi, H., 2024. Treatment readiness and prognosis for problematic smartphone use: Evaluation of the Stages of Change, Readiness, and Treatment Eagerness Scale (SOCRATES) and log data. \textit{Psychiatry and Clinical Neurosciences Reports}, 3(1), p.e172. \url{https://doi.org/10.1002/pcn5.172}
 \end{enumerate}
 
 \subsection{Non-Peer-Reviewed Articles and Preprints}
@@ -93,25 +99,31 @@ toshitaka.hamamura@flinders.edu.au
 	\item Ueda, M., \underline{Hamamura, T.}, Nakamura, A., \& Shimoyama, H. (2017). The application of animal research on the gene-environment interaction: A review. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 40, 22-29.
 	\item Uchimura, Y., \underline{Hamamura, T.}, Kitahara, Y., Oka, M., Suzuki, T., Kobayashi, N., \& Shimoyama, H., (2018). A Review on the population approach using Acceptance and commitment therapy: Increase of well-being and prevention effects. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 41, 34-41.
 	\item Takaseki, H., \underline{Hamamura, T.}, Lee, J., \& Shimoyama, H. (2019). Current support system and challenges on isolated mothers with risk of abuse. \textit{Bulletin of the Division of Clinical Psychology}, University of Tokyo, 42.
-	\item Chiba, T., Oka, T., \underline{Hamamura, T.}, Kobayashi, N., Honjo, M., Miyake, Y., Kubo, T., Kubo, T., Toda, H., Kanazawa, T., Boku, S., Hishimoto, A., Kawato, M., \& Cortese, A. (2020, December 18). PTSD symptoms related to COVID-19 as a high risk factor for suicide - Key to prevention. \textit{medRxiv}. \url{https://doi.org/110.1101/2020.12.15.20246819}
-	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023, January 11). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item Quaranta, T., \underline{Hamamura, T.}, \& Mearns, J. (2023). Correlates of Authoritarian versus Authoritative Parenting in the West and in Japan: Is This Dichotomy Valid in Japan?. \textit{OSF Preprints}. \url{https://doi.org/10.31219/osf.io/g9ep7}
+	\item Nakai, F., Kubo, T., Oka, T., Kobayashi, N., Tanichi, M., Murakami, M., \underline{Hamamura, T.}, Honjo, M., Miyake, Y., Ide, K., Cortese, A.. Pre-event psychiatric states predict trajectories of post-traumatic stress symptoms during the COVID-19 pandemic. \textit{medRxiv}. 2024:2024-01. \url{https://doi.org/10.1101/2024.01.14.23300571}
+	\item \underline{Hamamura, T.}, Kaneko, K., \& Ito, M. (2024, March 29). Association between gaming disorder and internalizing symptoms among children and adolescents: A child-parent dyadic study. \textit{PsyArXiv.} \url{https://doi.org/10.31234/osf.io/72fb3}
+	
 \end{enumerate}
 	 
 \section{Academic Presentation}
-\subsection{International Conference}
+\subsection{Invited Presentations}
 \begin{enumerate}
-	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, BC, Canada.
-	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles. (Poster)
-	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, July). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
-	\item \underline{Hamamura, T.}, Mearns, J. (2018, June). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, USA.
-	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+	\item \underline{Hamamura, T.}, Suganuma, S., Takano, A., Matsumoto, T., \& Shimoyama, H. (2018, September 9--13). \textit{How effective is a brief website intervention with personalized normative feedback among Japanese adults with risky drinking? Findings from a pilot RCT.} In A. Takano \& T. Baba (Chair), Possibilities and challenges using e-health and m-health for addiction treatment. Symposium conducted at the meeting of at the 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
+	\item \underline{Hamamura, T.} (2024, March 1). \textit{Cognitive-Behavioral Therapy for Treating Problematic Online Behaviors}. UMinn \& NTU Joint Symposium on Mental Health: Addiction and Traumatology.
+\end{enumerate}
+\subsection{Other Presentations}
+\begin{enumerate}
+	\item \underline{Hamamura, T.} (2010, June). \textit{The Role of Perfectionism, GPA Satisfaction, and Acculturation on Depression among International and Domestic Students} [Poster presentation]. Connecting Mind, an undergraduate research conference in psychology. Richmond, Canada.
+	\item \underline{Hamamura, T.} \& Laird, P.G., (2013, June). \textit{Impact of Perfectionism and Acculturation on Levels of Depression Experienced by International Students} [Poster presentation]. International Association for Cross-Cultural Psychology, Los Angeles, U.S.A. (Poster)
+	\item \underline{Hamamura, T.}, \& Mearns, J. (2016, June). \textit{Depression and somatic symptoms in Japanese and American college students: negative mood regulation expectancies as a personality predictor} [Poster presentation]. The 31st International Congress of Psychology, Yokohama.
+	\item \underline{Hamamura, T.}, Mearns, J. (2018, September). \textit{Music mood induction alters negative alcohol expectancies among Japanese adults with problematic drinking: findings from an Internet Experiment} [Poster presentation]. The 41st Annual Research Society on Alcoholism Scientific Meeting, San Diego, U.S.A.
 	\item \underline{Hamamura, T.} (2018, September). \textit{Relationships among expectancies, drinking motivation and problem drinking among Japanese adults: The role of expectancies for negative mood regulation} [Poster presentation]. The 19th Congress of International Society for Biomedical Research on Alcoholism, Kyoto, Japan.
 	\item \underline{Hamamura, T.}, Kawai, K., Uchimura, Y., Suganuma, S., Sato, K., \& Shimoyama, H. (2019, March). \textit{Does a self-monitoring mobile app help reduction of problem drinking?: A pilot randomized controlled trial among Japanese problem drinkers} [Poster presentation]. International Congress of Psychological Science, Paris, France.
-	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.
-	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. \url{https://doi.org/10.1109/HEALTHCOM49281.2021.9398974}
+	\item \underline{Hamamura, T.}, Konishi, T., Kurokawa, M., Mishima K., T., \& Honjo, M. (2020, February). \textit{Development and evaluation of an Android application for appropriate smartphone use among Japanese adolescents} [Poster presentation]. 2020 Society for Personality and Social Psychology Annual Convention, New Orleans, U.S.A.
+	\item Yasudomi, K., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A., \& Uchida, M. (2021, March). \textit{Usage Prediction and Effectiveness Verification of App Restriction Function for Smartphone Addiction} [Paper presentation]. IEEE International Conference on E-health Networking, Application Services (HEALTHCOM), 1-8. doi: 10.1109/HEALTHCOM49281.2021.9398974.  \url{https://doi.org/10.1109/HEALTHCOM49281.2021.9398974}
 	\item Yokoyama, C., Komazawa, A., Yahata, A., Miyamae, M., Kanie, A., \underline{Hamamura, T.}, \&, Ito, M. (2022, September). \textit{A Case Report of Positive Valence System-Focused Cognitive Behavioral Therapy Assisted by Virtual Reality for Postpartum Depression} [Poster presentation]. International Marc\'e Society for Perinatal Mental Health Biennial Meeting, London, U.K.
 	\item \underline{Hamamura, T.}, Kobayashi, N., Oka, T., Chiba, T., \& Honjo, M. (2023, August 23--25). \textit{Has problematic smartphone use changed between before and three years into the pandemic?} [Conference session]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
-	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Beahvioral Addictions, Incheon, Korea.
+	\item Kaneko, K., \underline{Hamamura, T.}, Fujisato, H., Király, O., Demetrovics, Z. \& Ito, M. (2023, August 23--25). \textit{Development and Validation of the Japanese Version of the Motives for Online Gaming Questionnaire} [Poster presentation]. The 8th International Conference on Behavioral Addictions, Incheon, Korea.
 	\item Furusawa, S., \underline{Hamamura, T.}, Yoneyama, A., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M. (2023, May 12--14). \textit{Visualization Methods to Support the Medical Treatment of the Problematic Use of Smartphones} [Oral presentation]. 2023 the 7th International Conference on Medical and Health Informatics (ICMHI), Kyoto, Japan.  \url{https://doi.org/10.1145/3608298.3608337}
 \end{enumerate}
 
@@ -123,7 +135,7 @@ toshitaka.hamamura@flinders.edu.au
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, September). Do Internet addiction types predict smartphone use among adolescents?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
 	\item An, T., \underline{Hamamura, T.}, Kishimoto, T., \& Mearns, J. (2019, September). The Effects of School and Acculturative Stress on Depression and Anxiety Experienced by Chinese International Students in Japan: How Do Negative Mood Regulation Expectancies Moderate these Effects?. Poster presented at the 83rd Annual Convention of the Japanese Psychological Association, Osaka, Japan.
 	\item \underline{Hamamura, T.}, Honjo, M., Kurokawa, M., Mishima, K., Konishi, T., Nagata, M., \& Yoneyama, A. (2019, October).The effects of the smartphone-based intervention on smartphone addiction among secondary school students: a randomized controlled trial using app-recorded measures. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2019, Hokkaido, Japan.
-	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. Oral presentation at IEICE General Conference 2020, online.
+	\item Mishima, K., Kurokawa, M., Nagata, M., Konishi, T., \underline{Hamamura, T.}, Honjo, M., Yoneyama, A. (2020, March). The differences on smartphone addiction tendencies in the subjective measures on daily life and individual traits. [Oral presentation]. The Institute of Electronics, Information and Communication Engineers General Conference, online.
 	\item \underline{Hamamura, T.}, Mearns, J. (2020, September). Drinking alone or with others? Excessive drinking among elders. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item Kurokawa, M., Mishima, K., \underline{Hamamura, T.}, Konishi, T., Nagata, M., Honjo, M., Yoneyama, A. (2020, September8--November 2). Examination of the short version of the Internet addiction in smartphone use scale. Poster presented at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
 	\item \underline{Hamamura, T.} (2020, September).  Definitions of smartphone dependence and its association with mental health.	In \underline{Hamamura, T.} (Chair). Current situations in smartphone dependence and appropriate interventions from the educational, medical, and industrial fields. Symposium conducted at the meeting of at the 84th Annual Convention of the Japanese Psychological Association, Tokyo, Japan.
@@ -134,6 +146,10 @@ toshitaka.hamamura@flinders.edu.au
 	\item \underline{Hamamura, T.}, Kobayashi, N., Jitoku, D., Nakajima, R., Takahashi, H., Honjo, M. (2022, September). Objective measurement of problematic smartphone use among A clinical sample. Oral presentation at the Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2022.
 	\item \underline{Hamamura, T.}, Kaneko, K., Ito, M. (2022, November 11). Associations of gaming disorder with internalizing and family functioning among children and adolescents. Oral presentation at the Japanese Association for Cognitive Therapy.
  	\item Ono, K., Tokushige, M., Hiratani, M., Kaneko, K., \underline{Hamamura, T.}, Miyamoto, Y., Tateno, M., Fujisato. H., Ito, M., Takano. A. (2023, October 13--15). \textit{Reliability and validity of a Japanese version of the Internet Gaming Disorder Scale for Children (IGDS-C)} [Oral presentation]. The Japanese Alcohol, Nicotine, \& Drug Addiction Conference 2023.
+	\item Sugiyama, K., \underline{Hamamura, T.}, Meguro, T., Taya, M., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M.(2024, April 04--08). Evaluation of the validity of usage state estimation for smartphone dependency patients and improvements in practicality. [Oral presentation]. The Institute of Electronics, Information and Communication Engineers: General Conference, Hiroshima.
+	\item Koyama, Y., \underline{Hamamura, T.}, Meguro, T.,\ Taya, M., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M.(2024, April 04--08). Analysis of smartphone usage habits focusing on battery remaining capacity. [Oral presentation]. The Institute of Electronics, Information and Communication Engineers: General Conference, Hiroshima.
+	\item Hayashi, K., \underline{Hamamura, T.}, Meguro, T.,\ Taya, M., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M.(2024, April 04--08). Estimation of usage posture for smartphone dependency patients using K-means clustering. [Oral presentation]. The Institute of Electronics, Information and Communication Engineers: General Conference, Hiroshima.
+	\item Kim, H., \underline{Hamamura, T.}, Meguro, T.,\ Taya, M., Honjo, M., Kobayashi, N., Jitoku, D., Uchida, M.(2024, April 04--08). Redefining Smartphone Apps Categories Based on Actual Usage. [Oral presentation]. The Institute of Electronics, Information and Communication Engineers General Conference, Hiroshima.
 \end{enumerate}
 
 \section{Other Publication}
@@ -173,6 +189,7 @@ toshitaka.hamamura@flinders.edu.au
 \begin{itemize}
 	\item Addictive Behaviors
 	\item Addictive Behaviors Reports
+	\item Brain and Behavior
 	\item Cyberpsychology: Journal of Psychosocial Research on Cyberspace 
 	\item INQUIRY
 	\item International Journal of Mental Health and Addiction
